# sinhala-fonts

./: CNAME  README.md  package.json  style.css
.github/workflows/: npm-publish.yml  pypi-publish.yml
fonts/: style.css
python/: pyproject.toml  setup.cfg
python/akurapluz/: __init__.py
