[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "akurapluz"
version = "1.0.1"
description = "AkuraPluz — Sinhala Font CSS Library. Use Sinhala fonts on any website like FontAwesome."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [{name = "Samith D Dilshan", email = "samith@dulaksha.com"}]
keywords = ["sinhala", "fonts", "css", "sri-lanka", "typography"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://akurapluz.dulaksha.com"
Documentation = "https://akurapluz.dulaksha.com/docs"
Repository = "https://github.com/akurapluz/sinhala-fonts"
