[metadata]
name = akurapluz
version = 1.0.1
description = AkuraPluz — Sinhala Font CSS Library for Python web projects
long_description = file: README.md
long_description_content_type = text/markdown
author = Samith D Dilshan
author_email = samith@dulaksha.com
license = MIT
url = https://akurapluz.dulaksha.com
project_urls =
    Documentation = https://akurapluz.dulaksha.com/docs
    Source = https://github.com/akurapluz/sinhala-fonts
    npm = https://www.npmjs.com/package/akurapluz
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries
    Topic :: Text Processing :: Fonts
keywords =
    sinhala
    fonts
    css
    sri-lanka
    typography
    bindumathi
    malithi
    roboto-bold
    emanee
    ganganee

[options]
packages = find:
python_requires = >=3.7
